# storm_historian

./: .env.example  README.md  makefile  pyproject.toml
src/: data_exploration.py
src/storm_historian/: __init__.py
src/storm_historian/ingestion/: discover_files.py  pull_file.py  source_info.yml  source_model.py  test_db.py
src/storm_historian/schemas/: file_tracker.sql
storm_history_dbt/: .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
storm_history_dbt/models/: exploration.sql
storm_history_dbt/models/sources/: raw_files.yml  storm_event_details.sql  storm_event_fatalities.sql  storm_event_locations.sql
storm_history_dbt/models/staging/: schema.yml
storm_history_dbt/models/staging/base/: base_storm_event__details.sql  base_storm_event__fatalities.sql  base_storm_event__locations.sql  stg_base_storm_event_details.sql  stg_base_storm_event_fatalities.sql  stg_base_storm_event_locations.sql
storm_history_dbt/models/staging/cleansed/: stg_storm_event_details.sql  stg_storm_event_fatalities.sql
storm_history_dbt/models/staging/stg/: stg_storm_event_details.sql  stg_storm_event_fatalities.sql
